03 sep 2015:
	. made world directory in main ai directory and populated it
	. bugfix: init of white and black boards with 7 (empty positions)
02 sep 2015:
	. bugfix: no more moving over other chess pieces 
	. bugfix: move system was broken for breadth first search node building 
	. bugfix: black starts at the bottom of its own board and white starts
	  at the top of its own board 
	. pawn becomes a queen when at last row
01 sep 2015:
	. bugfix: of old node test for == 7 
	  (free position in function legalmove)
	. All moves and strikes done 
	. added a mode flag for altering board search
	. added full Pawn and Knight AI for 2 AI players
	. FIXME add some extra constraints around percentage tests, losing speed

31 aug 2015:
	. added player names to board constructor

29 aug 2015:
	start of Chess NPC/AI/Tree code