@@ -1,3 +1,4 @@
+. watch out for a graph loop inside searchMove of Board.*
 . set route.clear() or not
 . moves in best order are knights, bishops and towers then queens and kings
 . the chess board is made from top left to bottom right (rows and columns)
