@@ -68,7 +68,7 @@ public:
 			const int& col, const int& oldrow, const int& oldcol,
 			ChessTreeNode& t);
 	//let the AI move based on a treenode
-	bool searchMove(std::string& name, ChessTreeNode& t,
+	bool searchMove(ChessTreeNodes& l, std::string& name, ChessTreeNode& t,
 			int& row, int& col, int& oldrow, int& oldcol);
 
 	//test if the move has been done
